# DynabyteSoftwareCore

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DynabyteSoftware.sln  README.md  index.html  params.json
.github/workflows/: cmake.yml
Core/: CMakeLists.txt  CoreDynamic.vcxproj  CoreDynamic.vcxproj.filters  CoreStatic.vcxproj  DynabyteSoftwareCore.cfg
Core/Boost/src/: DateTime.cpp
Core/include/: ArgumentOutOfRangeException.h  Console.h  ConsoleKey.h  ConsoleKeyInfo.h  ConsoleModifiers.h  CoreExports.h  DateTime.h  EnumFlagUtilities.h  Exception.h  IAssignable.h  ICloneable.h  IEquatable.h  Key.h  Log.h  VisitorTemplates.h  config.h.in
Core/include/Collections/: BidirectionalEnumerator.h  BinaryTree.h  ContainerFilterWrapper.h  ContainerIteratorWrapper.h  ContainerTransformWrapper.h  ContainerWrapper.h  Enumerator.h  FilterEnumerator.h  ForwardEnumerator.h  IEnumerable.h  IEnumerator.h  InputEnumerator.h  OutputEnumerator.h  RandomAccessEnumerator.h  TransformEnumerator.h
Core/include/Collections/Declaration/: ContainerFilterWrapper-decl.h  ContainerIteratorWrapper-decl.h  ContainerTransformWrapper-decl.h  IEnumerable-decl.h
Core/include/Collections/Definitions/: ContainerIteratorWrapper-def.h  IEnumerable-def.h
Core/include/Collections/Iterators/: IBidirectionalIterator.h  IForwardIterator.h  IInputIterator.h  IIterator.h  IOutputIterator.h  IRandomAccessIterator.h
Core/include/Collections/TemplateDeclarations/: IEnumerable-decl.h
Core/include/Collections/Wrappers/: ArrayWrapper.h  EnumeratorWrapper.h  FilterIterator.h  PointerIterator.h  TransformIterator.h
Core/src/: ArgumentOutOfRangeException.cpp  Console.cpp  DateTime.cpp  Exception.cpp  Log.cpp
Networking/: CMakeLists.txt
Networking/BoostImplementation/include/BoostImplementation/: Connection.h  IPaddress.h  IPendpoint.h  Server.h
Networking/BoostImplementation/src/: Connection.cpp  IPaddress.cpp  IPendpoint.cpp  Server.cpp
Networking/include/: AddressFamily.h  Connection.h  IPaddress.h  IPendpoint.h  IServer.h  NetworkingExports.h  Server.h  TransportProtocol.h
Networking/include/Internal/: IConnection.h  IIPaddress.h  IIPendpoint.h  IServer.h
Networking/src/: Connection.cpp  IPaddress.cpp  IPendpoint.cpp  Server.cpp
Networking/src/Internal/: IIPaddress.cpp
Testing/: CMakeLists.txt  Testing.vcxproj  Testing.vcxproj.filters
Testing/include/: ExceptionTests.h  LoggingTests.h
Testing/src/: Collections.cpp  Console.cpp  Containers.cpp  DateTime.cpp  ExceptionTests.cpp  Exceptions.cpp  LoggingTests.cpp  TcpNetworking.cpp  main.cpp
Testing/src/interactive_tests/: Console.cpp
documentation/: CoreExports_8h.html  CoreExports_8h__dep__incl.map  CoreExports_8h__dep__incl.md5  CoreExports_8h_source.html  Exception_8h_source.html  ICloneable_8h_source.html  Log_8h_source.html  _argument_out_of_range_exception_8h_source.html  _console_8h_source.html  _console_key_8h_source.html  _console_key_info_8h_source.html  _console_modifiers_8h_source.html  _container_filter_wrapper-decl_8h_source.html  _container_filter_wrapper_8h_source.html  _container_iterator_wrapper-decl_8h_source.html  _container_iterator_wrapper_8h_source.html  _container_transform_wrapper-decl_8h_source.html  _container_transform_wrapper_8h_source.html  _container_wrapper_8h_source.html  _core_exports_8h.html  _core_exports_8h.js  _core_exports_8h__dep__incl.map  _core_exports_8h__dep__incl.md5  _core_exports_8h_source.html  _date_time_8h_source.html  _enum_flag_utilities_8h_source.html  _exception_8h_source.html  _filter_enumerator_8h_source.html  _i_enumerable-decl_8h_source.html  _i_enumerable_8h_source.html  _i_enumerator_8h_source.html  _log_8h_source.html  _transform_enumerator_8h_source.html  annotated.html  annotated_dup.js  classDynabyteSoftware_1_1Exception-members.html  classDynabyteSoftware_1_1Exception.html  classDynabyteSoftware_1_1Exception__coll__graph.map  classDynabyteSoftware_1_1Exception__coll__graph.md5  classDynabyteSoftware_1_1ICloneable-members.html  (+180 more)
documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_c.js  functions_e.js  (+3 more)
