cmake_minimum_required (VERSION 3.8)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
project (DynabyteSoftware)
enable_testing()
include(CheckCXXCompilerFlag)
set(CMAKE_CXX_STANDARD 17)

check_cxx_compiler_flag(-mtune=native NATIVE_TARGET)
if(NATIVE_TARGET)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mtune=native")
endif()

if(WIN32)
  set(BOOST_INCLUDEDIR "C:/Program Files/Common Files/Boost/include")
  if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
    message(STATUS "x86")
    set(BOOST_LIBRARYDIR "C:/Program Files (x86)/Common Files/Boost/lib")
    message(STATUS "${BOOST_LIBRARYDIR}")
  else()
    set(BOOST_LIBRARYDIR "C:/Program Files/Common Files/Boost/lib")
  endif()
endif(WIN32)

add_subdirectory(Core)
add_subdirectory(Testing)
