set(CORE_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include")
file(GLOB_RECURSE CORE_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE CORE_HEADERS "${CORE_INCLUDE}/*.h")

add_library(CoreStatic STATIC ${CORE_SOURCE})
set_target_properties(CoreStatic PROPERTIES OUTPUT_NAME DynabyteSoftwareStatic)
source_group("Headers" FILES ${CORE_HEADERS})
source_group("Sources" FILES ${CORE_SOURCE})
target_include_directories(CoreStatic PUBLIC "${CORE_INCLUDE}")
target_compile_definitions(CoreStatic PUBLIC CORE_STATIC)

add_library(CoreDynamic SHARED ${CORE_SOURCE})
set_target_properties(CoreDynamic PROPERTIES OUTPUT_NAME DynabyteSoftware)
source_group("Headers" FILES ${CORE_HEADERS})
source_group("Sources" FILES ${CORE_SOURCE})
target_include_directories(CoreDynamic PUBLIC "${CORE_INCLUDE}")
target_compile_definitions(CoreDynamic PRIVATE CORE_DYNAMIC)