file(GLOB TESTS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
foreach(testSrc ${TESTS})
	get_filename_component(testName ${testSrc} NAME_WE)
	add_executable(${testName} ${testSrc})
	target_link_libraries(${testName} CoreDynamic)
	add_test(NAME ${testName} COMMAND ${testName})
endforeach(testSrc)

file(GLOB INTERACTIVE_TESTS "${CMAKE_CURRENT_SOURCE_DIR}/src/interactive_tests/*.cpp")
foreach(testSrc ${INTERACTIVE_TESTS})
	get_filename_component(testName ${testSrc} NAME_WE)
	add_executable(${testName} ${testSrc})
	target_link_libraries(${testName} CoreDynamic)
endforeach(testSrc)